--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="main.css"/>
+  <link rel="stylesheet" href="<%= css %>"/>
 </head>
 <body>
-<script src="vendors.js"></script>
-<script src="main.js"></script>
+<script src="<%= vendor %>"></script>
+<script src="<%= app %>"></script>
+<script src="<%= socketIOPath %>"></script>
 </body>
 </html>
