--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="<%= css %>"/>
+  <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.indigo-pink.min.css" />
 </head>
 <body>
 <script src="<%= vendor %>"></script>
