--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <link rel="stylesheet" href="<%= css %>"/>
-  <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.indigo-pink.min.css" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 <script src="<%= vendor %>"></script>
